updating packages to fix deployment

--- a/we-can-website/package.json
+++ b/we-can-website/package.json
@@ -71,8 +71,10 @@
 		"svelte"
 	],
 	"dependencies": {
-		"@supabase/supabase-js": "^2.86.2",
 		"@lucide/svelte": "^0.556.0",
-		"postgres": "^3.4.7"
+		"@supabase/supabase-js": "^2.86.2",
+		"pnpm": "^10.30.1",
+		"postgres": "^3.4.7",
+		"resend": "^6.9.2"
 	}
 }
