--- a/we-can-website/.prettierrc
+++ b/we-can-website/.prettierrc
@@ -1,7 +1,8 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
+	"semi": true,
+	"trailingComma": "es5",
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-svelte"],
 	"overrides": [
