--- a/we-can-website/package.json
+++ b/we-can-website/package.json
@@ -39,6 +39,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
+		"@iconify/svelte": "^5.2.1",
 		"@skeletonlabs/skeleton": "^4.7.4",
 		"@skeletonlabs/skeleton-svelte": "^4.7.4",
 		"@sveltejs/adapter-vercel": "^6.1.1",
